styling and z-index fix

--- a/pages/gallery/gallery.css
+++ b/pages/gallery/gallery.css
@@ -44,7 +44,7 @@ img {
 .modal {
     display: none;
     position: fixed;
-    z-index: 2;
+    z-index: 10;
     inset: 0;
     background-color: rgba(0, 0, 0, 0.6);
 }
