--- a/styles/global.css
+++ b/styles/global.css
@@ -32,7 +32,7 @@ nav {
     top: 0px;
     background-color: var(--secondary-green);
     opacity: 0.9;
-    z-index: 1;
+    z-index: 5;
     font-size: 20px;
     text-align: end;
     padding: 25px 100px;
